fix after review 3