@@ -16,7 +16,6 @@ import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemDtoCreate;
 import ru.practicum.shareit.item.mapper.CommentDtoMapper;
 import ru.practicum.shareit.item.mapper.ItemDtoMapper;
-import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.service.ItemService;
 import ru.practicum.shareit.item.storage.CommentRepository;
@@ -44,9 +43,8 @@ public class ItemServiceImpl implements ItemService {
     public ItemDto getItemById(long id, long userId) {
         Item item = itemRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException(Messages.ITEM_NOT_FOUND.getMessage()));
         List<CommentDto> comments = commentRepository.findByItemId(id, Sort.by("created")).stream().map(commentDtoMapper::mapToDto).collect(Collectors.toList());
-        List<Optional<BookingDtoWithBookerId>> lastAndNextBooking = getLastAndNextBookingDtoWithBookerId(id, userId, item.getOwner().getId());
-        return itemDtoMapper.mapToDto(item, lastAndNextBooking.get(0).orElse(null),
-                lastAndNextBooking.get(1).orElse(null), comments);
+        List<BookingDtoWithBookerId> lastAndNextBooking = getLastAndNextBookingDtoWithBookerId(id, userId, item.getOwner().getId());
+        return itemDtoMapper.mapToDto(item, lastAndNextBooking, comments);
     }
 
     @Override
@@ -55,21 +53,22 @@ public class ItemServiceImpl implements ItemService {
         if (owner.isEmpty())
             throw new ResourceNotFoundException(Messages.USER_NOT_FOUND.getMessage());
         return itemDtoMapper.mapToDto(itemRepository.save(itemDtoMapper.mapFromDtoCreate(itemDtoCreate, owner.get())),
-                null, null, List.of());
+                Arrays.asList(null, null), List.of());
     }
 
     @Override
     public List<ItemDto> getOwnerItems(long userId) {
-        Map<Long,List<Booking>> bookingsMap = new HashMap<>();
-        Map<Long,List<CommentDto>> commentsMap = new HashMap<>();
+        Map<Long, List<Booking>> bookingsMap = new HashMap<>();
+        Map<Long, List<CommentDto>> commentsMap = new HashMap<>();
 
-        bookingRepository.findByItemOwnerId(userId,Sort.by("start")).forEach(b -> bookingsMap.computeIfAbsent(b.getItem().getId(), k -> new ArrayList<>()).add(b));
-        commentRepository.findByItemOwnerId(userId,Sort.by("created")).forEach(c -> commentsMap.computeIfAbsent(c.getItem().getId(), k -> new ArrayList<>()).add(commentDtoMapper.mapToDto(c)));
+        bookingRepository.findByItemOwnerIdAndStatus(userId, Status.APPROVED, Sort.by("start")).forEach(b -> bookingsMap.computeIfAbsent(b.getItem().getId(), k -> new ArrayList<>()).add(b));
+        commentRepository.findByItemOwnerId(userId, Sort.by("created")).forEach(c -> commentsMap.computeIfAbsent(c.getItem().getId(), k -> new ArrayList<>()).add(commentDtoMapper.mapToDto(c)));
 
         return itemRepository.findByOwnerId(userId).stream().map(i -> {
-            List<Optional<BookingDtoWithBookerId>> lastAndNextBooking = getLastAndNextBookingDtoWithBookerIdByList(bookingsMap.getOrDefault(i.getId(),List.of()));
+            List<BookingDtoWithBookerId> lastAndNextBooking = getLastAndNextBookingDtoWithBookerIdByList(bookingsMap.getOrDefault(i.getId(), List.of()));
             List<CommentDto> comments = commentsMap.getOrDefault(i.getId(), List.of());
-            return itemDtoMapper.mapToDto(i, lastAndNextBooking.get(0).orElse(null), lastAndNextBooking.get(1).orElse(null), comments);
+
+            return itemDtoMapper.mapToDto(i, lastAndNextBooking, comments);
         }).collect(Collectors.toList());
     }
 
@@ -83,9 +82,8 @@ public class ItemServiceImpl implements ItemService {
         item.setDescription(!StringUtils.hasText(itemDto.getDescription()) ? item.getDescription() : itemDto.getDescription());
         item.setAvailable(itemDto.getAvailable() == null ? item.getAvailable() : itemDto.getAvailable());
         List<CommentDto> comments = commentRepository.findByItemId(id, Sort.by("created")).stream().map(commentDtoMapper::mapToDto).collect(Collectors.toList());
-        List<Optional<BookingDtoWithBookerId>> lastAndNextBooking = getLastAndNextBookingDtoWithBookerId(id, ownerId, item.getOwner().getId());
-        return itemDtoMapper.mapToDto(itemRepository.save(item), lastAndNextBooking.get(0).orElse(null),
-                lastAndNextBooking.get(1).orElse(null), comments);
+        List<BookingDtoWithBookerId> lastAndNextBooking = getLastAndNextBookingDtoWithBookerId(id, ownerId, item.getOwner().getId());
+        return itemDtoMapper.mapToDto(itemRepository.save(item), lastAndNextBooking, comments);
     }
 
     @Override
@@ -94,41 +92,33 @@ public class ItemServiceImpl implements ItemService {
         return itemRepository
                 .findByNameContainingIgnoreCaseOrDescriptionContainingIgnoreCaseAndAvailable(text, text, true)
                 .stream()
-                .map(i -> {
-                    return itemDtoMapper.mapToDto(i, null, null, null);
-                })
+                .map(i -> itemDtoMapper.mapToDto(i, Arrays.asList(null, null), List.of()))
                 .collect(Collectors.toList());
     }
 
-    private List<Optional<BookingDtoWithBookerId>> getLastAndNextBookingDtoWithBookerId(long itemId, long userId, long ownerId) {
+    private List<BookingDtoWithBookerId> getLastAndNextBookingDtoWithBookerId(long itemId, long userId, long ownerId) {
 
-        if (ownerId != userId) return List.of(Optional.empty(), Optional.empty());
-        List<Booking> bookings = bookingRepository.findByItemId(itemId, Sort.by("start"));
+        if (ownerId != userId) return Arrays.asList(null, null);
+        List<Booking> bookings = bookingRepository.findByItemIdAndStatus(itemId, Status.APPROVED, Sort.by("start"));
         return getLastAndNextBookingDtoWithBookerIdByList(bookings);
     }
 
-    private List<Optional<BookingDtoWithBookerId>> getLastAndNextBookingDtoWithBookerIdByList(List<Booking> bookings) {
+    private List<BookingDtoWithBookerId> getLastAndNextBookingDtoWithBookerIdByList(List<Booking> bookings) {
+        LocalDateTime now = LocalDateTime.now();
 
-        List<Booking> bookingsStart = bookings.stream().filter(booking -> booking.getStart()
-                .isBefore(LocalDateTime.now()) && booking.getStatus() == Status.APPROVED).collect(Collectors.toList());
+        List<Booking> bookingsStart = bookings.stream().filter(booking -> !booking.getStart()
+                .isAfter(now)).collect(Collectors.toList());
 
         List<Booking> bookingsEnd = bookings.stream().filter(booking -> booking.getStart()
-                .isAfter(LocalDateTime.now()) && booking.getStatus() == Status.APPROVED).collect(Collectors.toList());
+                .isAfter(now)).collect(Collectors.toList());
 
-        Optional<BookingDtoWithBookerId> last = bookingsStart.isEmpty() ? Optional.empty()
-                : Optional.of(bookingMapper.mapToBookingDtoWithBookerId(bookingsStart.get(bookingsStart.size() - 1)));
+        BookingDtoWithBookerId last = bookingsStart.isEmpty() ? null
+                : bookingMapper.mapToBookingDtoWithBookerId(bookingsStart.get(bookingsStart.size() - 1));
 
-        Optional<BookingDtoWithBookerId> next = bookingsEnd.isEmpty() ? Optional.empty()
-                : Optional.of(bookingMapper.mapToBookingDtoWithBookerId(bookingsEnd.get(0)));
-        return List.of(last, next);
+        BookingDtoWithBookerId next = bookingsEnd.isEmpty() ? null
+                : bookingMapper.mapToBookingDtoWithBookerId(bookingsEnd.get(0));
+
+
+        return Arrays.asList(last, next);
     }
-
-
-//    private void fillMaps() {
-//        bookingsMap.clear();
-//        commentMap.clear();
-//        bookingRepository.findAll(Sort.by("start")).forEach(b -> bookingsMap.computeIfAbsent(b.getItem().getId(), k -> new ArrayList<>()).add(b));
-//        commentRepository.findAll().forEach(c -> commentMap.computeIfAbsent(c.getItem().getId(), k -> new ArrayList<>()).add(commentDtoMapper.mapToDto(c)));
-//    }
-
 }
